--- a/brainly-f4/index.html
+++ b/brainly-f4/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/brainly-f4/public/favicon.svg" />
+    <link rel="icon"  type="image/svg+xml" href="/favicon2.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Second-Brain</title>
   </head>
